# glow-wasm-workspace-test

./: Cargo.toml  README.md
.run/: Build WASM.run.xml  Run WASM.run.xml  Run native.run.xml
core/: Cargo.toml
core/src/: camera.rs  lib.rs  test_app.rs
core/src/render/: line_renderer.rs  mod.rs  shader.rs
native/: Cargo.toml
native/src/: main.rs
resources/shaders/native/: line_renderer.frag  line_renderer.vert
resources/shaders/web/: line_renderer.frag  line_renderer.vert
wasm/: Cargo.toml  index.html  index.js  package-lock.json
wasm/src/: lib.rs
