[workspace]
#name = "glow-wasm-workspace-test"
members = ["core", "native", "wasm"]
resolver = "3"

[workspace.package]
description = "Web/Native app template"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "CC0-1"
license-file = "LICENSE"
repository = "https://github.com/CoffeeCatRailway/glow-wasm-workspace-test"
homepage = "https://github.com/CoffeeCatRailway/glow-wasm-workspace-test"

[workspace.dependencies]
glow = { version = "0.16.0", default-features = false }
glam = "0.30.9"
winit = "0.30.12"
winit_input_helper = "0.17.0"
log = "0.4.29"
