[package]
name = "core"
description = "Core app functionality and rendering code"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
glow.workspace = true
glam.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
log.workspace = true
bytemuck = "1.24.0"
