[package]
name = "wasm"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
glow = { workspace = true }
glam.workspace = true
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "Document"] }
winit = "0.30.12"
